@@ -78,6 +78,7 @@ Trunk (unreleased changes)
 
   BUG FIXES
    
+    HAMA-106: SubMatrix should be able to get row, column size (edwardyoon)
     HAMA-98: change '~=' operation to use `echo $f | grep 'examples$'` 
                (samuel via edwardyoon)
     HAMA-64: Bytes and Double convert (edwardyoon)
